# Mimi_Robot

install/: local_setup.sh  setup.sh
install/mimi_head/include/mimi_head/mimi_head/msg/: angle.h  angle.hpp  movement.h  movement.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  (+1 more)
install/mimi_head/lib/mimi_head/: mimi_camera  mimi_head_movement  mimi_monitor
install/mimi_head/share/mimi_head/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mimi_head/share/mimi_head/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_mimi_head__rosidl_generator_cExport-noconfig.cmake  export_mimi_head__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_mimi_head__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  mimi_headConfig-version.cmake  mimi_headConfig.cmake  mimi_head__rosidl_typesupport_cppExport-noconfig.cmake  mimi_head__rosidl_typesupport_introspection_cExport-noconfig.cmake  mimi_head__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/mimi_head/share/mimi_head/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/mimi_head/share/mimi_head/launch/: main.launch.py
install/mimi_head/share/mimi_head/msg/: Angle.idl  Angle.msg  Movement.idl  Movement.msg
log/: latest_build  latest_list
src/mimi_head/: CMakeLists.txt  package.xml
src/mimi_head/.resources/: pigtest  pigtest.cpp  servoserial.cpp  servotest.ino  videoFaceDetection.cpp
src/mimi_head/.resources/testesp32/: testesp32.ino
src/mimi_head/.templates/: publisher.cpp  service_client.cpp  service_server.cpp  subscriber.cpp
src/mimi_head/.templates/srv/: Interface.srv
src/mimi_head/launch/: main.launch.py
src/mimi_head/msg/: Movement.msg
src/mimi_head/src/: mimi_camera.cpp  mimi_head_movement.cpp  mimi_monitor.cpp
(+36 files in other folders)
